--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
 	box-sizing: border-box;
 }
 
@@ -15,17 +17,49 @@ body {
 }
 
 @keyframes zatres {
-	0% { transform: translate(1px, 1px) rotate(0deg); }
-	10% { transform: translate(-1px, -2px) rotate(-1deg); }
-	20% { transform: translate(-3px, 0px) rotate(1deg); }
-	30% { transform: translate(3px, 2px) rotate(0deg); }
-	40% { transform: translate(1px, -1px) rotate(1deg); }
-	50% { transform: translate(-1px, 2px) rotate(-1deg); }
-	60% { transform: translate(-3px, 1px) rotate(0deg); }
-	70% { transform: translate(3px, 1px) rotate(-1deg); }
-	80% { transform: translate(-1px, -1px) rotate(1deg); }
-	90% { transform: translate(1px, 2px) rotate(0deg); }
-	100% { transform: translate(1px, -2px) rotate(-1deg); }
+	0% {
+		transform: translate(1px, 1px) rotate(0deg);
+	}
+
+	10% {
+		transform: translate(-1px, -2px) rotate(-1deg);
+	}
+
+	20% {
+		transform: translate(-3px, 0px) rotate(1deg);
+	}
+
+	30% {
+		transform: translate(3px, 2px) rotate(0deg);
+	}
+
+	40% {
+		transform: translate(1px, -1px) rotate(1deg);
+	}
+
+	50% {
+		transform: translate(-1px, 2px) rotate(-1deg);
+	}
+
+	60% {
+		transform: translate(-3px, 1px) rotate(0deg);
+	}
+
+	70% {
+		transform: translate(3px, 1px) rotate(-1deg);
+	}
+
+	80% {
+		transform: translate(-1px, -1px) rotate(1deg);
+	}
+
+	90% {
+		transform: translate(1px, 2px) rotate(0deg);
+	}
+
+	100% {
+		transform: translate(1px, -2px) rotate(-1deg);
+	}
 }
 
 .kamen {
@@ -66,39 +100,4 @@ body {
 .kamen::after {
 	top: auto;
 	bottom: 25%;
-}
-
-.kamen:nth-child(1) {
-	background-color: #CF1D26;
-	aspect-ratio: 3 / 20;
-}
-
-.kamen:nth-child(2) {
-	background-color: #CD4C28;
-	aspect-ratio: 3 / 19;
-}
-
-.kamen:nth-child(3) {
-	background-color: #CECE1F;
-	aspect-ratio: 3 / 18;
-}
-
-.kamen:nth-child(4) {
-	background-color: #45AF44;
-	aspect-ratio: 3 / 17;
-}
-
-.kamen:nth-child(5) {
-	background-color: #43B8BF;
-	aspect-ratio: 3 / 16;
-}
-
-.kamen:nth-child(6) {
-	background-color: #2F5DA5;
-	aspect-ratio: 3 / 15;
-}
-
-.kamen:nth-child(7) {
-	background-color: #764495;
-	aspect-ratio: 3 / 14;
 }
